# minecraftv3

./: CMakeLists.txt  README.md  imgui.ini
include/: application.h  atlasGenerator.h  camera.h  chunk.h  chunkCoord.h  imageEdit.h  input.h  player.h  renderer.h  shader.h  voxel.h  voxelData.h  window.h  world.h
src/: camera.cpp  chunk.cpp  main.cpp
src/shaders/: foliagefrag.glsl  foliagevert.glsl  frag.glsl  grassfrag.glsl  skyfrag.glsl  skyvert.glsl  transparentfrag.glsl  vert.glsl
textures/: textures.json
